Add use count for click retargeting due to capture

Since pointer capture changes the target of the
following events for that pointer it potentially
changes the target of the click. Considering the
changed target for calculating the click target
may cause some websites to break. So this CL
adds a usecount for that case. Note this is an
upper bound on the breakage as lots of pages
may not have any listener for these click events
or just not break due to this retargetting.

BUG=699933

Review-Url: https://codereview.chromium.org/2747763002
Cr-Commit-Position: refs/heads/master@{#456933}

Former-commit-id: 18a3165ddb7326845a6028b1e3f93f7d347bde95