third_party/WebKit/Source/core/input/PointerEventManager.cpp
@@ -169,6 +169,7 @@ WebInputEventResult PointerEventManager::dispatchPointerEvent(
     DCHECK(!m_dispatchingPointerId);
     AutoReset<int> dispatchHolder(&m_dispatchingPointerId, pointerId);
     DispatchEventResult dispatchResult = target->dispatchEvent(pointerEvent);
+
     return EventHandlingUtil::toWebInputEventResult(dispatchResult);
   }
   return WebInputEventResult::NotHandled;
@@ -506,7 +507,7 @@ WebInputEventResult PointerEventManager::sendMousePointerEvent(
         mouseEventType == EventTypeNames::mouseup) {
       WebInputEventResult clickEventResult =
           m_mouseEventManager->dispatchMouseClickIfNeeded(
-              mouseTarget->toNode(), mouseEvent, canvasRegionId);
+              mouseTarget->toNode(), mouseEvent, canvasRegionId, target);
       result = EventHandlingUtil::mergeEventResult(clickEventResult, result);
     }
   }
